--- a/ikos/dbm/CMakeLists.txt
+++ b/ikos/dbm/CMakeLists.txt
@@ -3,3 +3,7 @@ target_link_libraries (dbm z)
 
 add_definitions(-Wno-int-to-pointer-cast)
 add_definitions(-Wno-sign-compare)
+
+install(TARGETS dbm
+  LIBRARY DESTINATION ${IkosCore_BINARY_DIR}/run/lib
+  )
