--- a/ikos/dbm/CMakeLists.txt
+++ b/ikos/dbm/CMakeLists.txt
@@ -5,5 +5,6 @@ add_definitions(-Wno-int-to-pointer-cast)
 add_definitions(-Wno-sign-compare)
 
 install(TARGETS dbm
-  LIBRARY DESTINATION ${IkosCore_BINARY_DIR}/run/lib
+  #LIBRARY DESTINATION ${IkosCore_BINARY_DIR}/run/lib
+  LIBRARY DESTINATION lib
   )
