Implemented generalization for term_expr domain, plus join/meet/widen.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,5 +7,10 @@ target_link_libraries (prog-2 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
 add_executable(prog-3 prog-3.cc)
 target_link_libraries (prog-3 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
 
+add_executable(unif-0 unif-0.cc)
+target_link_libraries (unif-0 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+add_executable(unif-0a   unif-0a.cc)
+target_link_libraries (unif-0a ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+
 add_executable(unif-1 unif-1.cc)
 target_link_libraries (unif-1 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
