Fixed some bugs; added tightening of parents to term domain.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,3 +14,6 @@ target_link_libraries (unif-0a ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
 
 add_executable(unif-1 unif-1.cc)
 target_link_libraries (unif-1 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+
+add_executable(unif-2 unif-2.cc)
+target_link_libraries (unif-2 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
