[NEW] Added interface from Cfg class to BGL graph. This required some changes in the API of Cfg which should not affect ikos-llvm.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries (prog-2 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
 
 add_executable(prog-3 prog-3.cc)
 target_link_libraries (prog-3 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+
+add_executable(prog-4 prog-4.cc)
+target_link_libraries (prog-4 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
