[NEW] Cfg: added array operations in the Cfg; [IMPROVED] made const get methods in Cfg class; [IMPROVED] removed unnecessary use of shared_ptr in Cfg class; [IMPROVED] a variable has a pointer to its factory; [NEW] added more tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,25 +1,3 @@
-add_executable(prog-1 prog-1.cc)
-target_link_libraries (prog-1 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
-add_executable(prog-2 prog-2.cc)
-target_link_libraries (prog-2 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
-add_executable(prog-3 prog-3.cc)
-target_link_libraries (prog-3 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
-add_executable(prog-4 prog-4.cc)
-target_link_libraries (prog-4 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
-add_executable(unif-0 unif-0.cc)
-target_link_libraries (unif-0 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-add_executable(unif-0a   unif-0a.cc)
-target_link_libraries (unif-0a ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
-add_executable(unif-1 unif-1.cc)
-target_link_libraries (unif-1 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
-# add_executable(unif-2 unif-2.cc)
-# target_link_libraries (unif-2 ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
-# add_executable(test-pre test-pre.cc)
-# target_link_libraries (test-pre ${GMPXX_LIB} ${GMP_LIB} pthread)
+add_subdirectory (simple)
+add_subdirectory (arrays)
+add_subdirectory (unif)
