Completed support for function calls, pointers and arrays both at the level of what can be represented in a CFG and also abstract domains to reason about those new features. Still more testing needed.

--- a/tests/arrays/CMakeLists.txt
+++ b/tests/arrays/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(unit-tests unit-tests.cc)
-target_link_libraries (unit-tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+add_executable(array_unit_tests unit-tests.cc)
+target_link_libraries (array_unit_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
 
-add_executable(tests tests.cc)
-target_link_libraries (tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+add_executable(array_tests tests.cc)
+target_link_libraries (array_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
 
