[NEW] Towards analysis of concurrent programs a la Mine. For now, we can define a bunch a threads and global shared variables and compute a global fixpoint until no change in any of the threads. However, analysis is still unsound because threads do not have yet a global view of the shared variables.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,6 @@
+#add_subdirectory (conc)
 add_subdirectory (simple)
 add_subdirectory (arrays)
 add_subdirectory (pointers)
 add_subdirectory (unif)
+
