[IMPROVEMENT] (1) decoupled StatementAnalyzer (new name AbsTransformer) from FwdAnalyzer, and (2) reduced the number of template arguments in FwdAnalyzer, Liveness, and Pointer classes.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-#add_subdirectory (conc)
+add_subdirectory (conc)
 add_subdirectory (simple)
 add_subdirectory (arrays)
 add_subdirectory (pointers)
