[FIXED] array smashing: cannot perform any strong update otherwise it might be unsound; [IMPROVEMENT] array graph: some changes so that it can infer relevant invariants even if the scalar domain is non-relational

--- a/tests/arrays/CMakeLists.txt
+++ b/tests/arrays/CMakeLists.txt
@@ -1,6 +1,5 @@
-add_executable(array_unit_tests unit-tests.cc)
-target_link_libraries (array_unit_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+add_executable(array_graph_tests array_graph_tests.cc)
+target_link_libraries (array_graph_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
 
-add_executable(array_tests tests.cc)
-target_link_libraries (array_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
-
+add_executable(array_smashing_tests array_smashing_tests.cc)
+target_link_libraries (array_smashing_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
