[FIX] moved global variables from header files (term domain) to cc files to avoid linker errors when the header file is included in multiple files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,10 @@
+set (IKOS_CORE_LIBS 
+  dbm
+  term
+  ${GMPXX_LIB}
+  ${GMP_LIB}
+  )
+
 add_subdirectory (conc)
 add_subdirectory (simple)
 add_subdirectory (arrays)
