--- a/tests/arrays/CMakeLists.txt
+++ b/tests/arrays/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(array_graph_tests array_graph_tests.cc)
-target_link_libraries (array_graph_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+target_link_libraries (array_graph_tests ${IKOS_CORE_LIBS})
 
 add_executable(array_smashing_tests array_smashing_tests.cc)
-target_link_libraries (array_smashing_tests ${GMPXX_LIB} ${GMP_LIB} dbm pthread)
+target_link_libraries (array_smashing_tests ${IKOS_CORE_LIBS})
