--- a/tests/unif/CMakeLists.txt
+++ b/tests/unif/CMakeLists.txt
@@ -7,3 +7,5 @@ target_link_libraries (unif-0a ${IKOS_CORE_LIBS})
 add_executable(unif-1 unif-1.cc)
 target_link_libraries (unif-1 ${IKOS_CORE_LIBS})
 
+add_executable(unif-2 unif-2.cc)
+target_link_libraries (unif-2 ${IKOS_CORE_LIBS})
