--- a/tests/conc/CMakeLists.txt
+++ b/tests/conc/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(conc_test1 test1.cc)
-target_link_libraries (conc_test1 ${IKOS_CORE_LIBS})
+target_link_libraries (conc_test1 ${CRAB_LIBS})
 
 
