--- a/tests/unif/CMakeLists.txt
+++ b/tests/unif/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_executable(unif-0 unif-0.cc)
-target_link_libraries (unif-0 ${IKOS_CORE_LIBS})
+target_link_libraries (unif-0 ${CRAB_LIBS})
 
 add_executable(unif-0a unif-0a.cc)
-target_link_libraries (unif-0a ${IKOS_CORE_LIBS})
+target_link_libraries (unif-0a ${CRAB_LIBS})
 
 add_executable(unif-1 unif-1.cc)
-target_link_libraries (unif-1 ${IKOS_CORE_LIBS})
+target_link_libraries (unif-1 ${CRAB_LIBS})
 
 add_executable(unif-2 unif-2.cc)
-target_link_libraries (unif-2 ${IKOS_CORE_LIBS})
+target_link_libraries (unif-2 ${CRAB_LIBS})
