--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,12 @@
-set (IKOS_CORE_LIBS 
+set (CRAB_LIBS 
   dbm
   term
   ${GMPXX_LIB}
   ${GMP_LIB}
   )
 
-add_subdirectory (conc)
 add_subdirectory (simple)
 add_subdirectory (arrays)
 add_subdirectory (pointers)
 add_subdirectory (unif)
+add_subdirectory (conc)
