--- a/tests/pointers/CMakeLists.txt
+++ b/tests/pointers/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(pointer_tests tests.cc)
-target_link_libraries (pointer_tests ${IKOS_CORE_LIBS})
+add_executable(pointers tests.cc)
+target_link_libraries (pointers ${CRAB_LIBS})
 
