--- a/tests/simple/CMakeLists.txt
+++ b/tests/simple/CMakeLists.txt
@@ -1,15 +1,15 @@
-add_executable(simple_test1 prog-1.cc)
-target_link_libraries (simple_test1 ${IKOS_CORE_LIBS})
+add_executable(test1 test1.cc)
+target_link_libraries (test1 ${CRAB_LIBS})
 
-add_executable(simple_test2 prog-2.cc)
-target_link_libraries (simple_test2 ${IKOS_CORE_LIBS})
+add_executable(test2 test2.cc)
+target_link_libraries (test2 ${CRAB_LIBS})
 
-add_executable(simple_test3 prog-3.cc)
-target_link_libraries (simple_test3 ${IKOS_CORE_LIBS})
+add_executable(test3 test3.cc)
+target_link_libraries (test3 ${CRAB_LIBS})
 
-add_executable(simple_test4 prog-4.cc)
-target_link_libraries (simple_test4 ${IKOS_CORE_LIBS})
+add_executable(test4 test4.cc)
+target_link_libraries (test4 ${CRAB_LIBS})
 
 add_executable(unittests unittests.cc)
-target_link_libraries (unittests ${IKOS_CORE_LIBS})
+target_link_libraries (unittests ${CRAB_LIBS})
 
