--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,12 @@ if (DEVMODE)
    add_subdirectory(tests)
 endif ()
 
-install(DIRECTORY include/
-  DESTINATION include)
-       
+install(DIRECTORY include/ DESTINATION include)
+
+# Licenses
+install(FILES Crab_LICENSE.txt DESTINATION shared/doc)       
+
+install(FILES Ikos_LICENSE.pdf DESTINATION shared/doc)       
 
 
 
