--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ set (CRAB_LIBS
   )
 
 add_subdirectory (simple)
-add_subdirectory (arrays)
-add_subdirectory (pointers)
-add_subdirectory (unif)
-add_subdirectory (conc)
+#add_subdirectory (arrays)
+#add_subdirectory (pointers)
+#add_subdirectory (unif)
+#add_subdirectory (conc)
