--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,11 @@
 set (CRAB_LIBS 
   dbm
   term
-  ${GMPXX_LIB}
-  ${GMP_LIB}
+  ${LDD_LIBRARY} 
+  ${GMPXX_LIB} 
+  ${GMP_LIB} 
+  ${RT_LIB}
   )
-
 
 add_subdirectory (simple)
 add_subdirectory (arrays)
@@ -12,5 +13,8 @@ add_subdirectory (pointers)
 add_subdirectory (unif)
 add_subdirectory (inter)
 add_subdirectory (conc)
-# add_subdirectory (cg)
+add_subdirectory (cg)
+if (USE_LDD)
+  add_subdirectory (boxes)
+endif ()
 
