Finished a runnable version of the boxes domain. Tested with small examples but some operations are not implemented yet.

--- a/tests/boxes/CMakeLists.txt
+++ b/tests/boxes/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_executable(crab_ldd_test ldd_test.cc)
-target_link_libraries (crab_ldd_test ${CRAB_LIBS})
+add_executable(ldd_test ldd_test.cc)
+target_link_libraries (ldd_test ${CRAB_LIBS})
+
+add_executable(boxes_test boxes_test.cc)
+target_link_libraries (boxes_test ${CRAB_LIBS})
