--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,5 +12,5 @@ add_subdirectory (pointers)
 add_subdirectory (unif)
 add_subdirectory (inter)
 add_subdirectory (conc)
-# add_subdirectory (cg)
+add_subdirectory (cg)
 
