[NEW] wrapper for apron domains.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,15 +29,26 @@ set (Boost_USE_STATIC_LIBS ON)
 find_package (Boost REQUIRED)
 include_directories (${Boost_INCLUDE_DIRS})
 
-option (DEVMODE "Enable development mode" OFF)
-option (USE_LDD "Enable ldd" OFF)
+option (DEVMODE   "Enable development mode" OFF)
+option (USE_LDD   "Enable Ldd library" OFF)
+option (USE_APRON "Enable Apron library" OFF)
+
+find_package(GMP REQUIRED)
+if (GMP_FOUND)
+  include_directories (${GMP_INCLUDE_DIR})
+  include_directories (${GMPXX_INCLUDE_DIR})
+else()
+  set(GMP_LIB "")
+  set(GMPXX_LIB "")
+endif()
 
 include(ExternalProject)
 set_property(DIRECTORY PROPERTY EP_STEP_TARGETS configure build test)
 
 find_package (Git)
+
 if (USE_LDD)
-  if (GIT_FOUND)
+if (GIT_FOUND)
     set (LDD_TAG "origin/master" CACHE STRING "ldd tag to use")
     set (LDD_REPO "http://git.code.sf.net/p/lindd/code" CACHE STRING "ldd repository")
     ExternalProject_Add(ldd
@@ -55,18 +66,36 @@ if (USE_LDD)
       LOG_CONFIGURE 1
       LOG_BUILD 1
       LOG_INSTALL 1)
-  else ()
-      message (STATUS "Could not find git. Not downloading ldd")
-  endif()
+else ()
+  message (STATUS "Could not find git. Not downloading ldd")
+endif()
 endif ()
 
-find_package(GMP REQUIRED)
-if (GMP_FOUND)
-  include_directories (${GMP_INCLUDE_DIR})
-  include_directories (${GMPXX_INCLUDE_DIR})
-else()
-  set(GMP_LIB "")
-  set(GMPXX_LIB "")
+
+if (USE_APRON)
+if (GIT_FOUND)
+  get_filename_component (GMP_SEARCH_PATH ${GMP_INCLUDE_DIR} PATH)
+
+  find_package(MPFR REQUIRED)
+  if (MPFR_FOUND)
+    get_filename_component (MPFR_SEARCH_PATH ${MPFR_INCLUDES} PATH)
+  endif ()
+
+  ExternalProject_Add(apron
+    GIT_REPOSITORY https://arieg@bitbucket.org/arieg/apron.git
+    GIT_TAG 708af3860585ffb747668c4deb34bccc111cf687
+    CONFIGURE_COMMAND echo "Apron does not need a configure"
+    BUILD_IN_SOURCE 1
+    BUILD_COMMAND make CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} 
+    APRON_PREFIX=<INSTALL_DIR> GMP_PREFIX=${GMP_SEARCH_PATH} MPFR_PREFIX=${MPFR_SEARCH_PATH} 
+    INSTALL_COMMAND 
+    make APRON_PREFIX=<INSTALL_DIR> GMP_PREFIX=${GMP_SEARCH_PATH} MPFR_PREFIX=${MPFR_SEARCH_PATH} install
+    LOG_CONFIGURE 1
+    LOG_INSTALL 1
+    LOG_BUILD 1)
+else ()
+  message (STATUS "Could not find git. Not downloading apron")
+endif()
 endif()
 
 if (USE_LDD)
@@ -77,17 +106,37 @@ if (USE_LDD)
     set (LDD_LIBS ${LDD_LIBRARY})
     set (HAVE_LDD TRUE)
   else()
-    ExternalProject_Get_Property (ldd INSTALL_DIR)
-    set (LDD_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of ldd" FORCE)
-    message (WARNING "No ldd found. Run \n\tcmake --build . --target ldd && cmake ${CMAKE_SOURCE_DIR}")
+     ExternalProject_Get_Property (ldd INSTALL_DIR)
+     set (LDD_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of ldd" FORCE)
+     message (WARNING "No ldd found. Run \n\tcmake --build . --target ldd && cmake ${CMAKE_SOURCE_DIR}")
+     return()
+  endif()
+endif ()
+
+if (USE_APRON)
+  find_package(Apron)
+  if (APRON_FOUND)
+    include_directories (${APRON_INCLUDE_DIR})
+    set (APRON_LIBS ${APRON_LIBRARY})
+    set (HAVE_APRON TRUE)
+  else()
+    ExternalProject_Get_Property (apron INSTALL_DIR)
+    set (APRON_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of apron" FORCE)
+    message (WARNING "No apron found. Run \n\tcmake --build . --target apron && cmake ${CMAKE_SOURCE_DIR}")
     return()
   endif()
 endif ()
 
 include_directories (${Crab_SOURCE_DIR}/include)
+
 if (USE_LDD)
   set_target_properties(ldd PROPERTIES EXCLUDE_FROM_ALL ON)
 endif ()
+
+if (USE_APRON)
+  set_target_properties(apron PROPERTIES EXCLUDE_FROM_ALL ON)
+endif ()
+
 
 # check for rt lib. Not needed on OSX.
 find_library(RT_LIB NAMES rt)
