Changes to choose between AVX and SSE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,13 +81,26 @@ if (GIT_FOUND)
     get_filename_component (MPFR_SEARCH_PATH ${MPFR_INCLUDES} PATH)
   endif ()
 
+  find_package(SSE)
+  if (AVX_FOUND)
+     message(STATUS "Building opt-oct with AVX")
+     set (IS_VECTOR "IS_VECTOR=-DVECTOR")
+  else ()
+     if (SSE2_FOUND OR SSE3_FOUND OR SSSE3_FOUND OR SSE4_1_FOUND)
+        message(STATUS "Building opt-oct with SSE")
+        set (IS_SSE "IS_SSE=-DSSE")
+     else ()
+        message(STATUS "Building opt-oct without vectorized operations.")
+     endif ()
+  endif ()
+
   set (APRON_TAG "origin/elina" CACHE STRING "apron tag to use")
   ExternalProject_Add(apron
     GIT_REPOSITORY git@bitbucket.org:jorgenavas/apron.git 
     GIT_TAG ${APRON_TAG}
     CONFIGURE_COMMAND echo "Apron does not need a configure"
     BUILD_IN_SOURCE 1
-    BUILD_COMMAND make CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} 
+    BUILD_COMMAND make CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} ${IS_VECTOR} ${IS_SSE}
     APRON_PREFIX=<INSTALL_DIR> GMP_PREFIX=${GMP_SEARCH_PATH} MPFR_PREFIX=${MPFR_SEARCH_PATH} 
     INSTALL_COMMAND 
     make APRON_PREFIX=<INSTALL_DIR> GMP_PREFIX=${GMP_SEARCH_PATH} MPFR_PREFIX=${MPFR_SEARCH_PATH} install
