--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,4 +20,5 @@ add_subdirectory (inter)
 add_subdirectory (conc)
 add_subdirectory (cg)
 add_subdirectory (thresholds)
+add_subdirectory (disintervals)
 
