[NEW] added cmake option to build libs static or shared. By default static.

--- a/lib/dbm/CMakeLists.txt
+++ b/lib/dbm/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_library(dbm STATIC dbm.cpp expr.cpp)
+add_library(dbm ${CRAB_LIBS_TYPE} 
+  dbm.cpp 
+  expr.cpp)
 #target_link_libraries (dbm z)
 
 add_definitions(-Wno-int-to-pointer-cast)
