--- a/tests/simple/CMakeLists.txt
+++ b/tests/simple/CMakeLists.txt
@@ -10,6 +10,9 @@ target_link_libraries (test3 ${CRAB_LIBS})
 add_executable(test4 test4.cc)
 target_link_libraries (test4 ${CRAB_LIBS})
 
+add_executable(test5 test5.cc)
+target_link_libraries (test5 ${CRAB_LIBS})
+
 add_executable(unittests unittests.cc)
 target_link_libraries (unittests ${CRAB_LIBS})
 
