[NEW] added a nullity analysis. The analysis is based on the flat lattice: bottom <= NN, N <= top, where NN is definitely non-null and N is definitely null.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ if (USE_APRON)
 endif ()
 add_subdirectory (arrays)
 add_subdirectory (pointers)
+add_subdirectory (nullity)
 add_subdirectory (unif)
 add_subdirectory (inter)
 add_subdirectory (conc)
