Added finer granularity for debugging messages. The macro CRAB_DEBUG has been replaced with CRAB_LOG. For instance, rather than typing;
tests/simple/test1

we can type:

tests/simple/test1 --log=zones-split

which will show debug messages generated only by the zones-split domain.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,11 @@
 set (CRAB_LIBS 
 #  dbm
-   term)
+   term
+   Debug
+   )
 
 set (CRAB_LIBS ${CRAB_LIBS}
+  ${Boost_PROGRAM_OPTIONS_LIBRARY}
   ${LDD_LIBRARY} 
   ${APRON_LIBRARY}
   ${GMPXX_LIB} 
