--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if (CUSTOM_BOOST_ROOT)
 endif()
 
 set (Boost_USE_STATIC_LIBS ON)
-find_package (Boost REQUIRED)
+find_package (Boost COMPONENTS program_options REQUIRED)
 include_directories (${Boost_INCLUDE_DIRS})
 
 option (DEVMODE   "Enable development mode" OFF)
