Stats and logging are optional via CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ include_directories (${Boost_INCLUDE_DIRS})
 option (DEVMODE   "Enable development mode" OFF)
 option (USE_LDD   "Enable Ldd library" OFF)
 option (USE_APRON "Enable Apron library" OFF)
+option (USE_STATS "Enable statistics about the analysis" OFF)
+option (USE_LOG   "Enable logging for debugging purposes" OFF)
 
 find_package(GMP REQUIRED)
 if (GMP_FOUND)
@@ -158,12 +160,31 @@ include_directories (${Crab_SOURCE_DIR}/include)
 
 if (USE_LDD)
   set_target_properties(ldd PROPERTIES EXCLUDE_FROM_ALL ON)
+  message (STATUS "The boxes domain will be available")  
+else ()
+  message (STATUS "The boxes domain will not be available")  
 endif ()
 
 if (USE_APRON)
   set_target_properties(apron PROPERTIES EXCLUDE_FROM_ALL ON)
+  message (STATUS "The apron domains will be available")
+else ()
+  message (STATUS "The apron domains will not be available")
 endif ()
 
+if (USE_STATS)
+  set (HAVE_STATS TRUE)
+  message (STATUS "Analysis statistics is enabled")
+else ()
+  message (STATUS "Analysis statistics is disabled")
+endif ()
+
+if (NOT USE_LOG)
+  set (NCRABLOG TRUE)
+  message (STATUS "Analysis logging for debugging is disabled")
+else ()
+  message (STATUS "Analysis logging for debugging is enabled")
+endif ()
 
 # check for rt lib. Not needed on OSX.
 find_library(RT_LIB NAMES rt)
