Added capabilities to check properties

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,4 +30,5 @@ add_subdirectory (conc)
 add_subdirectory (cg)
 add_subdirectory (thresholds)
 add_subdirectory (disintervals)
+add_subdirectory (checkers)
 
