Few improvements and some cleanup: 1) avoid expensive copies.   - Created a wrapper for references to Cfg and CallGraph objects that     can be assignable and copyable. Then, Cfg and CallGraph users such as     fixpoint, callgraph, etc can pass by value the wrapper without knowing     it is indeed a wrapper.   - Made the intra, inter, liveness, and pointer analyzers non-copyable objects.     Cfg, BasicBlock, and CallGraph are also non-copyable. 2) better use of smart pointers. E.g., use whenever possible    make_shared to avoid one extra allocation. 3) Removed the toy backward analysis since it was useful only for    non-numerical domains and liveness did not use anyway.

--- a/tests/apron/CMakeLists.txt
+++ b/tests/apron/CMakeLists.txt
@@ -1,2 +1,8 @@
-add_executable(apron_test apron_test.cc)
-target_link_libraries (apron_test ${CRAB_LIBS})
+add_executable(apron-domains apron_test.cc)
+target_link_libraries (apron-domains ${CRAB_LIBS})
+
+install(TARGETS apron-domains
+  RUNTIME DESTINATION tests/domains
+  )
+
+
