--- a/tests/boxes/CMakeLists.txt
+++ b/tests/boxes/CMakeLists.txt
@@ -1,5 +1,9 @@
-add_executable(ldd_test ldd_test.cc)
-target_link_libraries (ldd_test ${CRAB_LIBS})
+# add_executable(ldd_test ldd_test.cc)
+# target_link_libraries (ldd_test ${CRAB_LIBS})
 
-add_executable(boxes_test boxes_test.cc)
-target_link_libraries (boxes_test ${CRAB_LIBS})
+add_executable(boxes boxes_test.cc)
+target_link_libraries (boxes ${CRAB_LIBS})
+
+install(TARGETS boxes
+  RUNTIME DESTINATION tests/domains
+  )
