--- a/tests/checkers/CMakeLists.txt
+++ b/tests/checkers/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_executable(checkers test.cc)
 target_link_libraries (checkers ${CRAB_LIBS})
 
+install(TARGETS checkers
+  RUNTIME DESTINATION tests/checkers
+  )
