--- a/tests/inter/CMakeLists.txt
+++ b/tests/inter/CMakeLists.txt
@@ -1,2 +1,6 @@
 add_executable(inter test.cc)
 target_link_libraries (inter ${CRAB_LIBS})
+
+install(TARGETS inter
+  RUNTIME DESTINATION tests/inter
+  )
