--- a/tests/pointers/CMakeLists.txt
+++ b/tests/pointers/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(pointers tests.cc)
 target_link_libraries (pointers ${CRAB_LIBS})
 
+install(TARGETS pointers
+  RUNTIME DESTINATION tests/domains
+  )
+
