--- a/tests/simple/CMakeLists.txt
+++ b/tests/simple/CMakeLists.txt
@@ -13,8 +13,29 @@ target_link_libraries (test4 ${CRAB_LIBS})
 add_executable(test5 test5.cc)
 target_link_libraries (test5 ${CRAB_LIBS})
 
-add_executable(unittests unittests.cc)
-target_link_libraries (unittests ${CRAB_LIBS})
+# add_executable(unittests unittests.cc)
+# target_link_libraries (unittests ${CRAB_LIBS})
+
+install(TARGETS test1
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS test2
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS test3
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS test4
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS test5
+  RUNTIME DESTINATION tests/domains
+  )
+
 
 # add_executable(sparsegraph sparsegraph.cc)
 # target_link_libraries (sparsegraph ${CRAB_LIBS})
