--- a/tests/unif/CMakeLists.txt
+++ b/tests/unif/CMakeLists.txt
@@ -1,17 +1,34 @@
-add_executable(unif-0 unif-0.cc)
-target_link_libraries (unif-0 ${CRAB_LIBS})
+# add_executable(term-0 unif-0.cc)
+# target_link_libraries (term-0 ${CRAB_LIBS})
 
-add_executable(unif-0a unif-0a.cc)
-target_link_libraries (unif-0a ${CRAB_LIBS})
+# add_executable(term-0a unif-0a.cc)
+# target_link_libraries (term-0a ${CRAB_LIBS})
 
-add_executable(unif-1 unif-1.cc)
-target_link_libraries (unif-1 ${CRAB_LIBS})
+add_executable(term-1 unif-1.cc)
+target_link_libraries (term-1 ${CRAB_LIBS})
 
-add_executable(unif-2 unif-2.cc)
-target_link_libraries (unif-2 ${CRAB_LIBS})
+add_executable(term-2 unif-2.cc)
+target_link_libraries (term-2 ${CRAB_LIBS})
 
-add_executable(unif-3 unif-3.cc)
-target_link_libraries (unif-3 ${CRAB_LIBS})
+add_executable(term-3 unif-3.cc)
+target_link_libraries (term-3 ${CRAB_LIBS})
 
-add_executable(unif-4 unif-4.cc)
-target_link_libraries (unif-4 ${CRAB_LIBS})
+add_executable(term-4 unif-4.cc)
+target_link_libraries (term-4 ${CRAB_LIBS})
+
+install(TARGETS term-1
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS term-2
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS term-3
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS term-4
+  RUNTIME DESTINATION tests/domains
+  )
+
