--- a/tests/cg/CMakeLists.txt
+++ b/tests/cg/CMakeLists.txt
@@ -1,4 +1,8 @@
-add_executable(cg_test test.cc)
-target_link_libraries (cg_test ${CRAB_LIBS})
+add_executable(callgraph test.cc)
+target_link_libraries (callgraph ${CRAB_LIBS})
+
+install(TARGETS callgraph
+  RUNTIME DESTINATION tests/callgraph
+  )
 
 
