--- a/tests/thresholds/CMakeLists.txt
+++ b/tests/thresholds/CMakeLists.txt
@@ -1,4 +1,8 @@
-add_executable(test test.cc)
-target_link_libraries (test ${CRAB_LIBS})
+add_executable(thresholds test.cc)
+target_link_libraries (thresholds ${CRAB_LIBS})
+
+install(TARGETS thresholds
+  RUNTIME DESTINATION tests/fixpo
+  )
 
 
