--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set (CRAB_LIBS ${CRAB_LIBS}
   ${Boost_PROGRAM_OPTIONS_LIBRARY}
   ${LDD_LIBRARY} 
   ${APRON_LIBRARY}
+  ${MPFR_LIBRARIES} 
   ${GMPXX_LIB} 
   ${GMP_LIB} 
   ${RT_LIB}
