--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,6 @@ if (CUSTOM_BOOST_ROOT)
   set (Boost_NO_SYSTEM_PATHS "ON")
 endif()
 
-set (Boost_USE_STATIC_LIBS ON)
-find_package (Boost COMPONENTS program_options REQUIRED)
-include_directories (${Boost_INCLUDE_DIRS})
-
 option (ENABLE_TESTS "Enable tests" OFF)
 option (USE_LDD   "Enable Ldd library" OFF)
 option (USE_APRON "Enable Apron library" OFF)
@@ -46,16 +42,6 @@ if (NOT BUILD_CRAB_LIBS_SHARED)
    # put static libraries first unless we want shared libraries
    set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" ${CMAKE_FIND_LIBRARY_SUFFIXES})
 endif ()   
-
-find_package(GMP REQUIRED)
-if (GMP_FOUND)
-  include_directories (${GMP_INCLUDE_DIR})
-  include_directories (${GMPXX_INCLUDE_DIR})
-else()
-  set(GMP_LIB "")
-  set(GMPXX_LIB "")
-endif()
-
 
 if (BUILD_CRAB_LIBS_SHARED)
   message (STATUS "All crab libraries will be built as shared libraries")
@@ -77,6 +63,26 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 if (NOT CMAKE_INSTALL_RPATH)
   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 endif ()
+
+set (Boost_USE_STATIC_LIBS ON)
+if (ENABLE_TESTS)
+  find_package (Boost COMPONENTS program_options REQUIRED)
+else ()
+  find_package (Boost)
+endif ()
+if (Boost_FOUND)
+  include_directories (${Boost_INCLUDE_DIRS})
+endif ()
+
+find_package(GMP REQUIRED)
+if (GMP_FOUND)
+  include_directories (${GMP_INCLUDE_DIR})
+  include_directories (${GMPXX_INCLUDE_DIR})
+else()
+  set(GMP_LIB "")
+  set(GMPXX_LIB "")
+endif()
+
 
 include(ExternalProject)
 set_property(DIRECTORY PROPERTY EP_STEP_TARGETS configure build test)
@@ -216,18 +222,25 @@ if (NOT RT_LIB)
 endif()
 mark_as_advanced(RT_LIB)
 
-find_package(OpenMP)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+# find_package(OpenMP)
+# if (OpenMP_FOUND)
+#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+# endif ()
 
-add_definitions(-std=c++11)
-add_definitions(-Wno-redeclared-class-member)
-add_definitions(-Wno-covered-switch-default)
-
-add_definitions(-Wno-sometimes-uninitialized)
-add_definitions(-Wno-maybe-uninitialized)
-
+# XXX: do not use add_definition for warning flags. add_definition is
+#      intended for -D...
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-redeclared-class-member")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-covered-switch-default")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sometimes-uninitialized")
 if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-add_definitions( -Wno-unused-local-typedefs)
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-maybe-uninitialized")
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedefs")
+else ()
+   if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-uninitialized")
+     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedef")
+   endif ()
 endif ()
 
 include_directories (${CMAKE_BINARY_DIR}/include)
