Added reversed view of CFGs

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory (unif)
 add_subdirectory (inter)
 add_subdirectory (conc)
 add_subdirectory (cg)
+add_subdirectory (cfg)
 add_subdirectory (thresholds)
 add_subdirectory (disintervals)
 add_subdirectory (checkers)
