--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,17 +201,19 @@ else ()
   message (STATUS "The apron domains will not be available")
 endif ()
 
-if (USE_STATS)
+if (NOT USE_STATS)
+  set (HAVE_STATS FALSE)
+  message (STATUS "Analysis statistics is disabled")
+else ()
   set (HAVE_STATS TRUE)
   message (STATUS "Analysis statistics is enabled")
-else ()
-  message (STATUS "Analysis statistics is disabled")
 endif ()
 
 if (NOT USE_LOG)
   set (NCRABLOG TRUE)
   message (STATUS "Analysis logging for debugging is disabled")
 else ()
+  set (NCRABLOG FALSE)
   message (STATUS "Analysis logging for debugging is enabled")
 endif ()
 
