--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,9 +66,9 @@ endif ()
 
 set (Boost_USE_STATIC_LIBS ON)
 if (ENABLE_TESTS)
-  find_package (Boost COMPONENTS program_options REQUIRED)
+  find_package (Boost 1.55.0 COMPONENTS program_options REQUIRED)
 else ()
-  find_package (Boost)
+  find_package (Boost 1.55.0)
 endif ()
 if (Boost_FOUND)
   include_directories (${Boost_INCLUDE_DIRS})
