--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,7 +23,7 @@ if (USE_APRON)
   add_subdirectory (apron)
 endif ()
 add_subdirectory (arrays)
-add_subdirectory (pointers)
+#add_subdirectory (pointers)
 add_subdirectory (nullity)
 add_subdirectory (unif)
 add_subdirectory (inter)
