[IMPROVEMENT] Finer-grained collection of stats. - Each domain updates stat counters so we can have finer-grained stats for   functor and product domains. - Statistics can be displayed for all tests by adding option --stats

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,7 +25,7 @@ endif ()
 add_subdirectory (arrays)
 #add_subdirectory (pointers)
 add_subdirectory (nullity)
-add_subdirectory (unif)
+add_subdirectory (terms)
 add_subdirectory (inter)
 add_subdirectory (conc)
 add_subdirectory (cg)
