Started re-engineering of the array graph domain. - Added a new api array_sgraph_domain_traits for special operations   needed by the array graph domain for efficiency. - Added do_initialization to domain_traits.

--- a/tests/arrays/CMakeLists.txt
+++ b/tests/arrays/CMakeLists.txt
@@ -4,6 +4,9 @@ target_link_libraries (array_graph ${CRAB_LIBS})
 add_executable(array_smashing array_smashing_tests.cc)
 target_link_libraries (array_smashing ${CRAB_LIBS})
 
+add_executable(array_sparse_graph array_sparse_graph_tests.cc)
+target_link_libraries (array_sparse_graph ${CRAB_LIBS})
+
 install(TARGETS array_graph
   RUNTIME DESTINATION tests/domains
   )
@@ -11,3 +14,8 @@ install(TARGETS array_graph
 install(TARGETS array_smashing
   RUNTIME DESTINATION tests/domains
   )
+
+install(TARGETS array_sparse_graph
+  RUNTIME DESTINATION tests/domains
+  )
+
