--- a/tests/simple/CMakeLists.txt
+++ b/tests/simple/CMakeLists.txt
@@ -13,8 +13,11 @@ target_link_libraries (test4 ${CRAB_LIBS})
 add_executable(test5 test5.cc)
 target_link_libraries (test5 ${CRAB_LIBS})
 
-# add_executable(unittests unittests.cc)
-# target_link_libraries (unittests ${CRAB_LIBS})
+add_executable(unittests unittests.cc)
+target_link_libraries (unittests ${CRAB_LIBS})
+
+# add_executable(sparsegraph sparsegraph.cc)
+# target_link_libraries (sparsegraph ${CRAB_LIBS})
 
 install(TARGETS test1
   RUNTIME DESTINATION tests/domains
@@ -37,5 +40,3 @@ install(TARGETS test5
   )
 
 
-# add_executable(sparsegraph sparsegraph.cc)
-# target_link_libraries (sparsegraph ${CRAB_LIBS})
