--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,13 @@ if (GIT_FOUND)
      endif ()
   endif ()
 
-  set (APRON_TAG "origin/elina" CACHE STRING "apron tag to use")
+  if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    # Mac OS X specific code
+    set (APRON_TAG "origin/elina-el-capitan" CACHE STRING "apron tag to use")
+  else ()
+    set (APRON_TAG "origin/elina" CACHE STRING "apron tag to use")
+  endif()
+  
   ExternalProject_Add(apron
     GIT_REPOSITORY https://jorgenavas@bitbucket.org/jorgenavas/apron.git 
     GIT_TAG ${APRON_TAG}
