Support for analysis over rationals.
- Modified CFG and abstract transformers so they can take domains over
  integers or rationals in a transparent way. Before we were always
  fixing a CFG consisting of statement over integers. Nevertheless a
  fundamental limitation is that we cannot mix statements over
  integers and rationals in the same CFG because the compiler will
  complain.

- Improved design of the abstract transformers for inter-procedural
  analysis (bottom-up and top-down transformers) so they are easier to
  maintain and extend.

- We only tested for intervals over rationals and apron domains over
  reals. E.g., using polka polyhedra over reals we infer for the zeno
  example (given by Dejan) the expected invariants x+2y =1 and x >=0.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,9 @@
 set (CRAB_LIBS 
-   OS
-   Term
-   Debug
-   Stats
-   )
+  OS
+  Term
+  Debug
+  Stats
+  )
 
 set (CRAB_LIBS ${CRAB_LIBS}
   ${Boost_PROGRAM_OPTIONS_LIBRARY}
@@ -31,6 +31,7 @@ add_subdirectory (cfg)
 add_subdirectory (thresholds)
 add_subdirectory (disintervals)
 add_subdirectory (checkers)
+add_subdirectory (rationals)
 
 # Needed if shared libraries
 if (BUILD_CRAB_LIBS_SHARED)
