[NEW] CFG language for boolean operations. The new statements are:
bvar := linear_constraint
bvar := bvar
bvar := bvar <bop> bvar (<bop> is and, or, xor)
assume (bvar)
assert (bvar)
select (bvar, bvar, bvar, bvar)

The statement bvar:= bvar is not strictly necessary since it can be
simulated by e.g., bvar := bvar or false, but we think it is more
convenient like this. However, the boolean not is not directly
available but it can be simulated by bvar := bvar xor true.

--- a/tests/simple/CMakeLists.txt
+++ b/tests/simple/CMakeLists.txt
@@ -13,6 +13,9 @@ target_link_libraries (test4 ${CRAB_LIBS})
 add_executable(test5 test5.cc)
 target_link_libraries (test5 ${CRAB_LIBS})
 
+add_executable(test6 test6.cc)
+target_link_libraries (test6 ${CRAB_LIBS})
+
 add_executable(unittests unittests.cc)
 target_link_libraries (unittests ${CRAB_LIBS})
 
@@ -36,6 +39,10 @@ install(TARGETS test4
   )
 
 install(TARGETS test5
+  RUNTIME DESTINATION tests/domains
+  )
+
+install(TARGETS test6
   RUNTIME DESTINATION tests/domains
   )
 
