Added test case that shows a bug with apron domains with rationals

--- a/tests/apron/CMakeLists.txt
+++ b/tests/apron/CMakeLists.txt
@@ -1,7 +1,10 @@
 add_executable(apron-domains apron_test.cc)
 target_link_libraries (apron-domains ${CRAB_LIBS})
 
-install(TARGETS apron-domains
+add_executable(apron-bug apron_bug.cc)
+target_link_libraries (apron-bug ${CRAB_LIBS})
+
+install(TARGETS apron-domains apron-bug
   RUNTIME DESTINATION tests/domains
   )
 
