[NEW] support for rationals and boolean operations in the boxes domain

--- a/tests/boxes/CMakeLists.txt
+++ b/tests/boxes/CMakeLists.txt
@@ -1,9 +1,12 @@
-# add_executable(ldd_test ldd_test.cc)
-# target_link_libraries (ldd_test ${CRAB_LIBS})
+add_executable(ldd_test ldd_test.cc)
+target_link_libraries (ldd_test ${CRAB_LIBS})
 
 add_executable(boxes boxes_test.cc)
 target_link_libraries (boxes ${CRAB_LIBS})
 
-install(TARGETS boxes
+install(TARGETS boxes 
+  RUNTIME DESTINATION tests/domains
+  )
+install(TARGETS ldd_test
   RUNTIME DESTINATION tests/domains
   )
