--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ option (USE_LDD   "Enable Ldd library" OFF)
 option (USE_APRON "Enable Apron library" OFF)
 option (USE_STATS "Enable statistics" ON)
 option (USE_LOG   "Enable logging for debugging purposes" ON)
-option (BUILD_CRAB_LIBS_SHARED "Build all Crab libraries shared." OFF)
+option (BUILD_CRAB_LIBS_SHARED "Build all Crab libraries shared." ON)
 
 # Temporary fix because ldd provides only static libraries
 if (USE_LDD)
@@ -48,10 +48,11 @@ if (BUILD_CRAB_LIBS_SHARED)
   set(CRAB_LIBS_TYPE SHARED)
   # so that executables outside the build tree can find later shared
   # libraries
-  # set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-  # if (NOT CMAKE_INSTALL_RPATH)
-  #   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-  # endif ()
+  set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+  set(CMAKE_MACOSX_RPATH TRUE)    
+  if (NOT CMAKE_INSTALL_RPATH)
+    set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+  endif ()
 else()
   message (STATUS "All crab libraries will be built statically")
   set(CRAB_LIBS_TYPE STATIC)
